# dify-official-plugins

.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: pre-check-plugin.yaml
agent-strategies/cot_agent/: manifest.yaml  requirements.txt
datasources/aws_s3_storage/: PRIVACY.md  README.md  main.py  manifest.yaml  requirements.txt
datasources/azure_blob/: .difyignore  PRIVACY.md  README.md  manifest.yaml  requirements.txt
datasources/box_datasource/: PRIVACY.md  README.md  manifest.yaml
datasources/brightdata_datasource/: .gitignore  GUIDE.md  PRIVACY.md  README.md  manifest.yaml  requirements.txt
datasources/confluence_datasource/: README.md  manifest.yaml  requirements.txt
datasources/dropbox_datasource/: .gitignore  PRIVACY.md  README.md  manifest.yaml  requirements.txt
datasources/firecrawl_datasource/: PRIVACY.md  README.md  manifest.yaml
datasources/github/: PRIVACY.md  README.md  manifest.yaml  requirements.txt
datasources/gitlab_datasource/: .difyignore  GUIDE.md  PRIVACY.md  README.md  manifest.yaml  requirements.txt
datasources/google_cloud_storage/: PRIVACY.md  README.md  manifest.yaml  requirements.txt
datasources/google_drive/: PRIVACY.md  README.md  manifest.yaml  (+1 more)
models/lemonade/: .difyignore  README.md  manifest.yaml  pyproject.toml  requirements.txt
models/lemonade/models/: common_openai.py
models/lemonade/models/llm/: llm.py
models/lemonade/models/rerank/: rerank.py
models/lemonade/models/text_embedding/: text_embedding.py
models/lemonade/provider/: lemonade.py  lemonade.yaml
untitled/: pom.xml
(+989 files in other folders)
